# dozr

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TEST.md  USEFULNESS_REPORT.md  analyze_distributions.py  examples.md  run_examples.sh  test_gamma_sampling.sh  test_pareto_sampling.sh
benches/: wait_conditions.rs
dozr/: Cargo.toml  README.md  examples.md
dozr/src/: cli.rs  conditions.rs  main.rs
dozr/tests/: cli.rs
examples/: basic_wait.rs  distributions.rs  verbose_progress.rs
scripts/sampling/: test_exponential_sampling.sh  test_lognormal_sampling.sh  test_normal_sampling.sh
src/: cli.rs  conditions.rs  lib.rs  main.rs
tests/: cli.rs  usefulness.rs
