[package]
name = "dozr"
version = "0.1.0"
edition = "2024"
description = "A flexible `sleep`-like command-line utility for pausing execution with fun timing features."
license = "MIT"
repository = "https://github.com/ShaneIsley/dozr"
authors = ["Shane Isley <shane.isley@gmail.com>"]
homepage = "https://github.com/ShaneIsley/dozr"
documentation = "https://docs.rs/dozr"
readme = "README.md"
keywords = ["sleep", "cli", "wait", "timing", "utility", "automation", "delay"]
categories = ["command-line-utilities", "development-tools", "os", "system-programming"]
rust-version = "1.85.0" # Minimum Rust version required

[lib]
name = "dozr"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
humantime = "2.2.0"
rand = "0.9.1"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
