[package]
name = "dozr"
version = "0.2.0"
edition = "2024"

[lib]
name = "dozr"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
humantime = "2.2.0"
rand = "0.9.1"
chrono = "0.4"

[dev-dependencies]
assert_cmd = "2.0.17"
predicates = "3.1.3"
